--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-app",
+  "name": "proyecto_tarea",
   "version": "1.0.0",
   "description": "Aplicacion MVC demo",
   "main": "index.js",
